<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/icon_home"
        android:title="@string/home" />
    <item
        android:id="@+id/deliveryFragment"
        android:icon="@drawable/icon_delivery"
        android:title="@string/delivery" />
    <item
        android:id="@+id/reportsFragment"
        android:icon="@drawable/icon_arrow"
        android:title="@string/reports" />
    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/icon_notification"
        android:title="@string/notification" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/icon_yet"
        android:title="@string/yet" />

</menu>